# DRONE

./: .gitignore  README.md  app.py  build.ps1  config.py  pyproject.toml  requirements-export.txt  requirements.txt  start.sh
data/flight_logs/: sample_flight.csv
scripts/: export_yolo.py  setup_gpiozero_lgpio.sh
utils/: __init__.py  detection.py  interfaces.py  servo.py  telemetry.py  tracking.py  video.py
