[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droneai-command-center"
version = "0.1.0"
description = "Lightweight drone operator UI for telemetry snapshots and object detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "DroneAI Team" } ]
keywords = ["drone", "object detection", "telemetry", "surveillance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
]
dependencies = [
    "numpy>=1.24.0,<2.3",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0,<4.12.0",
    "pymavlink>=2.4.40",
    "onnxruntime>=1.17.0",
    "psutil>=5.9.0",
]

[project.scripts]
droneai = "app:main"
